<resources>
    <string name="app_name">Pulse</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    4<string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loginText">Please login with your Google Account</string>
    <string name="places_string">PLACES</string>
    <string name="messages_string">MESSAGES</string>
    <string name="lists_string">LISTS</string>
    <string name="setting_string">SETTINGS</string>
    <string name="help_string">HELP</string>
    <string name="share_string">SHARE THIS APP</string>
    <string name="signout_string">SIGNOUT</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="places_textbox">Places let you know when circle members come and go.</string>
<string name="placesText1">Add New Place</string>
    <string name="messages_text">You need to have atleast one person in our Circle to send messages</string>

</resources>
